# pqts

./: .coverage  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  SECURITY.md  SUPPORT.md  coverage.xml  demo.py  docker-compose.yml  main.py  mkdocs.yml  pyproject.toml  python_bootstrap.py  requirements.in  requirements.txt
.github/: CODEOWNERS  dependabot.yml  labels.yml  pull_request_template.md
analytics/: dashboard.py  execution_drift.py  paper_readiness.py  pnl_truth_ledger.py  promotion_gates.py  research_api.py
apps/: demo.py
config/: live_canary.yaml  paper.yaml
contracts/: __init__.py
core/: engine.py  mechanism_switches.py  risk_manager.py  secrets_policy.py
dashboard/: app.py
docs/: ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  BACKTESTING.md  BENCHMARKS.md  BRANCH_PROTECTION.md  CODEX_COMPLIANCE.md  CODEX_ENFORCER.md  COMP_ISSUES_DRAFT.md  DEFINITION_OF_DONE.md  DEVELOPMENT_SUMMARY.md  EXECUTION_PLAN_2W_RYG.md  EXTERNAL_BETA_FRAMEWORK.md  GITHUB_PAGES_SETUP.md  HUMANS_ONLY.md  HUMAN_DECISIONS_LOG.md  IMPLEMENTATION_DIRECTION.md  ISSUE_BACKLOG.md  NATIVE_HOTPATH.md  OFFICIAL_INTEGRATIONS.md  OVERVIEW.md  PYPI_PUBLISHING.md  QUICKSTART_5_MIN.md  REFERENCE_PERFORMANCE.md  RELEASE_CHECKLIST.md  REPO_SIMPLIFICATION.md  RESEARCH_ANALYTICS_LAYER.md  SRS.md  SRS_66_71_EXECUTION_MAP.md  SRS_ASSIMILATION.md  SRS_COVERAGE_MATRIX.md  SRS_FULL_CLOSURE_EXECUTION_MAP.md  SRS_GAP_BACKLOG.md  SRS_UNMAPPED_P2_EXECUTION_MAP.md  TODO.md  TODO_SORTED.json  TODO_SORTED.md  TOP_100_ROI_MOVES.json  TOP_100_ROI_MOVES.md  USER_RESEARCH_2026_03.md  index.md
execution/: paper_campaign.py  paper_fill_model.py  realistic_costs.py  risk_aware_router.py  smart_router.py  tca_feedback.py  tca_storage.py  ws_ingestion.py
portfolio/: strategy_allocator.py
research/: ai_agent.py  database.py  walk_forward.py
results/: README.md  RESULT_TEMPLATE.md  reference_performance_latest.json
risk/: kill_switches.py  regime_overlay.py
scripts/: apply_api_migrations.py  calibration_diagnostics_report.py  control_plane_report.py  create_comp_issues.sh  create_github_issues_from_backlog.sh  daily_paper_ops.py  download_historical_data.py  enforce_data_retention.py  execution_drift_report.py  funnel_report.py  generate_monthly_report.py  generate_readme_media.py  github_push.sh  monthly_attribution_report.py  paper_readiness_report.py  pnl_truth_ledger_report.py  publish_reference_bundles.py  render_reference_performance.py  run_canary_ramp.py  run_capacity_ladder.py  run_chaos_recovery_suite.py  run_continuous_paper.py  run_event_replay.py  run_exchange_certification.py  run_failure_drills.py  run_incident_automation.py  run_mechanism_ablation.py  run_mode_entrypoint.py  run_nightly_strategy_review.py  run_paper_6m_harness.py  run_paper_90d_harness.py  run_paper_campaign.py  run_promotion_pipeline.py  run_reconciliation_daemon.py  run_shadow_stream_worker.py  run_simulation_suite.py  run_strategy_tournament.py  run_ws_ingestion.py  security_compliance_report.py  slo_health_report.py  (+4 more)
strategies/: market_making.py
tests/: conftest.py  (+133 more)
(+376 files in other folders)
